2007-06-30 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(trackball(float, float, float, float)): Initialize rotation.

2007-06-30 Braden McDaniel  <braden@endoframe.com>

	Expose common attributes of lighting nodes via
	openvrml::light_node.

	* src/libopenvrml/openvrml/node.cpp
	(openvrml::light_node::ambient_intensity() const): Added function.
	(openvrml::light_node::intensity() const): Added function.
	(openvrml::light_node::on() const): Added function.
	(openvrml::light_node::color() const): Added function.
	* src/libopenvrml/openvrml/node.h
	(openvrml::light_node): Added member functions ambient_intensity,
	do_ambient_intensity, intensity, do_intensity, on, do_on, color,
	do_color.
	* src/libopenvrml/openvrml/vrml97node.cpp
	(abstract_light_node): Removed functions ambient_intensity,
	intensity, on, color.  Added virtual functions
	do_ambient_intensity, do_intensity, do_on, do_color.

2007-06-30 Braden McDaniel  <braden@endoframe.com>

	automake no longer requires that M4 macros be explicitly
	listed (in EXTRA_DIST) in order to be packaged.

	* Makefile.am
	* configure.ac
	* m4/COPYING: Removed; a copy of the GPL is now in the package
	root directory.
	* m4/Makefile.am: Removed.

2007-06-21 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Added option --with-libjs to enable use of libjs
	built from the stand-alone SpiderMonkey distribution.

2007-06-21 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp: Wrap include of
	jpeglib.h in extern "C"; the MacPorts variant of the libjpeg
	header doesn't do this.

2007-06-06 Braden McDaniel  <braden@endoframe.com>

	Made constructors of mf* types taking a FieldValue::value_type
	inline.  This should facilitate elision of a copy of the argument.

	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/field_value.h

2007-06-02 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.16.5 release.
